# huion-keydial-mini-uinput

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  NIXOS.md  README.md  config.yaml  flake.nix  pyproject.toml  requirements.txt  setup.py  test_bluetooth_watcher.py  test_service_dependency.py  test_wait_and_attach.py
examples/: nixos-configuration.nix
packaging/: config.yaml.default  install-udev.sh  install-user.sh
packaging/arch/: PKGBUILD  README.md  install-deps.sh
packaging/debian/: changelog  control  rules
packaging/systemd/: huion-keydial-mini-uinput.service  huion-keydial-mini-user.service  huion-keydial-mini.service
packaging/udev/: 99-huion-keydial-mini-user.rules  99-huion-keydial-mini.rules  unbind-huion.sh
src/huion_keydial_mini/: __init__.py  __main__.py  bluetooth_watcher.py  config.py  create_uinput_device.py  device.py  event_logger.py  hid_parser.py  keybind_manager.py  keydialctl.py  main.py  scanner.py  uinput_handler.py
tests/: README.md  conftest.py  run_tests.py  test_combo_config.py  test_combo_hid_parser.py  test_combo_keydialctl.py  test_hid_parser.py
